Add Config class and Config properties file to be able to implement certain settings for the application.